--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Barberia Alura</title>
+    <title>Barbería Alura</title>
     <link rel="stylesheet" href="styles.css">
     <style>
 
@@ -12,10 +12,15 @@
 
 <body>
 
+    <header>
+        <h1 class="titulo-principal">Barberia Alura</h1>
+    </header>
+
+
     <img id="banner" src="banner/banner.jpg" alt="banner barberia">
 
     <div class="principal">
-        <h1>Sobre la Barbería Alura</h1>
+        <h2 class="titulo-centralizado">Sobre la Barbería Alura</h2>
 
         <p>
             Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente.
@@ -32,7 +37,7 @@
     </div>
 
     <div class="diferenciales">
-        <h2>Diferenciales</h2>
+        <h3 class="titulo-centralizado">Diferenciales</h3>
 
         <ul>
             <li class="items">Atención personalizada a los clientes</li>
